[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpdf"
version = "0.1.0"
description = "Highlight core concepts in a pdf"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
  {name = "Abhinav-175"},
]
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.26.5",
    "requests>=2.32.5",
]

[project.scripts]
hpdf = "hpdf:main"
